upadte Project code along

--- a/WEEK 05 - HTML - CSS/Notes/indexproject.html
+++ b/WEEK 05 - HTML - CSS/Notes/indexproject.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Menu</title>
-    <link rel="stylesheet" href="stylespractices.css">
+    <link rel="stylesheet" href="projectstyles.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
            <li><a href="two.html">About</a></li>
        </ul>
    </nav>
-   <p>Learn more about <a href="https://www.cnn.com/travel/article/world-best-food-dishes/index.html">Amazing Foods</a>!</p>
+   <p class="footer"> class  Learn more about <a href="https://www.cnn.com/travel/article/world-best-food-dishes/index.html">Amazing Foods</a>!</p>
 </body>
 
 </html>
