update grid responsive
grid responsive - desktop table version

--- a/WEEK 05 - HTML - CSS/CSS exercices/CSS final/index.html
+++ b/WEEK 05 - HTML - CSS/CSS exercices/CSS final/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="subcontainerleft"> 
                 <div class="imgbckg"> <img src="imageMain.png" alt=""></div>
-                 <div class="title"> <p>The Bright Future of Web 3.0?</p></div>
+                 <div class="title"> <p>The Bright Future of <span>Web 3.0?</span> </p></div>
                  <div class="textleft">
                     <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
                     <a class="btn" href="#">READ MORE</a>
@@ -67,12 +67,12 @@
 
             <div class="sub-container-posts">
                 <div class="divimg">
-                    <a href=""><img src="img1.png" alt=""></a>
+                    <img src="img1.png" alt="">
                 </div>
                 <div class="divtext">
 
                     <p class="number">01</p>
-                    <p class="minittl">reviving retro pcs</p>
+                    <p class="minittl">reviving retro PCs</p>
                     <p class="description">What happens when old PCs are given modern upgrades?</p>
 
                 </div>
@@ -82,12 +82,12 @@
 
             <div class="sub-container-posts">
                 <div class="divimg">
-                    <a href=""><img src="img2.png" alt=""></a>
+                    <img src="img2.png" alt="">
                 </div>
                 <div class="divtext">
                     <p class="number">01</p>
-                    <p class="minittl">reviving retro pcs</p>
-                    <p class="description">What happens when old PCs are given modern upgrades?</p>
+                    <p class="minittl">Top 10 Laptops of 2022</p>
+                    <p class="description">Our best picks for various needs and budgets.</p>
                     
                 </div>
 
@@ -95,13 +95,13 @@
 
             <div class="sub-container-posts">
                 <div class="divimg">
-                    <a href=""><img src="img3.png" alt=""></a>
+                    <img src="img3.png" alt="">
                 </div>
                 <div class="divtext">
 
                     <p class="number">01</p>
-                    <p class="minittl">reviving retro pcs</p>
-                    <p class="description">What happens when old PCs are given modern upgrades?</p>
+                    <p class="minittl">The Growth of Gaming</p>
+                    <p class="description">How the pandemic has sparked fresh opportunities.</p>
                     
                 </div>
 
