--- a/WEEK 05 - HTML - CSS/CSS exercices/CSS final/index.html
+++ b/WEEK 05 - HTML - CSS/CSS exercices/CSS final/index.html
@@ -68,7 +68,7 @@
 
             <div class="sub-container-posts">
                 <div class="divimg">
-                    <img src="img1.png" alt="">
+                    <img  class="kenburns-top"  src="img1.png" alt="">
                 </div>
                 <div class="divtext">
 
@@ -83,7 +83,7 @@
 
             <div class="sub-container-posts">
                 <div class="divimg">
-                    <img src="img2.png" alt="">
+                    <img class="kenburns-top"  src="img2.png" alt="">
                 </div>
                 <div class="divtext">
                     <p class="number">01</p>
@@ -96,7 +96,7 @@
 
             <div class="sub-container-posts">
                 <div class="divimg">
-                    <img src="img3.png" alt="">
+                    <img class="kenburns-top" src="img3.png" alt="">
                 </div>
                 <div class="divtext">
 
