update until 06b exercise exo4

--- a/WEEK 05 - HTML - CSS/CSS exercices/JS DOM/exercices/ex-api/index.html
+++ b/WEEK 05 - HTML - CSS/CSS exercices/JS DOM/exercices/ex-api/index.html
@@ -6,11 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>No buttons here</h1>
-    <div class="container"></div>
+
+    <h1>Pokemon</h1>
+    <div class="container">
+
+        
+    </div>
 
     
-
     <script src="app.js"></script>
 </body>
 </html>
