--- a/WEEK 05 - HTML - CSS/CSS exercices/JS DOM/tutos-videos/index.html
+++ b/WEEK 05 - HTML - CSS/CSS exercices/JS DOM/tutos-videos/index.html
@@ -6,7 +6,37 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="parent">
+    <p>
+      I am a child of my parent
+      <button>I am a child of the paragraph</button>
+    </p>
+  </div>
 
+
+
+  <!-- <h1 style="background-color: aqua;">bubbling delegation</h1> 
+
+  <div class="parent">
+    <button>One</button>
+    <button>Two</button>
+    <button>Three</button>
+    <button>Four</button>
+    <button>Five</button>
+    <button class="my-class" >Six</button>
+    <button class="my-class" >Seven</button>
+    <button class="my-class" >Eight</button>
+  </div> -->
+
+<!-- ______ The event object______
+  <div class="parent">
+    <p>
+      I am a child of my parent
+      <button>I am a child of the paragraph</button>
+    </p>
+  </div> -->
+
+<!-- 
     <div class="container">
 
         <p class=" hello">  hello world</p>
@@ -22,7 +52,7 @@
         </ul>
 
         
-      </div>
+      </div> -->
       <script src="app.js"></script>
 </body>
 </html>
