update  form validation
update  form validation

--- a/WEEK 05 - HTML - CSS/CSS exercices/JS DOM/tutos-videos/index.html
+++ b/WEEK 05 - HTML - CSS/CSS exercices/JS DOM/tutos-videos/index.html
@@ -6,12 +6,33 @@
     <title>Document</title>
 </head>
 <body>
-  <div class="parent">
+
+
+  <form method="get">
+    <label for="username"> enter user name</label>
+    <input type="text" name="" id="username" placeholder="username"> <br>
+    <label for="password" type> enter your password</label>
+    <input type="password" name="password" id="password" value="password"> <br>
+    <label for="email"> email</label>
+    <input type="email" name="email" id="email"> <br>
+    <label for="message"> Enter your message </label>
+    <textarea name="message-text" id=" message-text" placeholder="your message"></textarea><br><br>
+
+    <input type="submit" value="send">
+
+
+
+
+
+  </form>
+
+
+  <!-- <div class="parent">
     <p>
       I am a child of my parent
       <button>I am a child of the paragraph</button>
     </p>
-  </div>
+  </div> -->
 
 
 
