--- a/WEEK  - HTML - CSS/CSS exercices/javascript week 10/Project Bemovies/index.html
+++ b/WEEK  - HTML - CSS/CSS exercices/javascript week 10/Project Bemovies/index.html
@@ -22,7 +22,7 @@
             <li><a href="#">latest</a></li>
             <li><a href="#">genres</a></li>
             <li><a href="#">register</a></li>
-            <li><a href="#">login</a></li>
+            <li><a href="#" id="loginnavbar">login</a></li>
           </ul>
         </div>
       </div>
@@ -60,7 +60,7 @@
 
       <!-- MODALS HTML -->
     <div id="myModal" class="modal">
-      <div id="containergnrl-modal">
+      <div id="modal-wrapper">
         <div class="modal-content">
           <span class="close-btn">&times;</span>
           
