--- a/WEEK  - HTML - CSS/CSS exercices/javascript week 10/Project Bemovies front by me/index.html
+++ b/WEEK  - HTML - CSS/CSS exercices/javascript week 10/Project Bemovies front by me/index.html
@@ -139,8 +139,6 @@
        
      
 
-
-
      <!-- section_____________ -->
     <section class="latest-releases">
 
@@ -151,7 +149,7 @@
             <div class="swiper-slide"><img src="el padrino2.jfif" alt="Imagen 2"></div>
             <div class="swiper-slide"><img src="el padrino3.jfif" alt="Imagen 3"></div>
             <div class="swiper-slide"><img src="tokyo.jfif" alt="Imagen 4"></div>
-            <div class="swiper-slide"><img src="Padrinos_m%3Fgicos.webp" alt="Imagen 5"></div>
+            <div class="swiper-slide"><img src="https://m.media-amazon.com/images/M/MV5BMTY3OTg2OTM3OV5BMl5BanBnXkFtZTYwNzY5OTA3._V1_.jpg" alt="Imagen 5"></div>
         </div>
         <!-- nav buttons-->
         <div class="swiper-button-next"></div>
@@ -189,7 +187,7 @@
             <div class="swiper-slide"><img src="el padrino2.jfif" alt="Imagen 2"></div>
             <div class="swiper-slide"><img src="el padrino3.jfif" alt="Imagen 3"></div>
             <div class="swiper-slide"><img src="tokyo.jfif" alt="Imagen 4"></div>
-            <div class="swiper-slide"><img src="Padrinos_m%3Fgicos.webp" alt="Imagen 5"></div>
+            <div class="swiper-slide"><img src="https://m.media-amazon.com/images/M/MV5BMTY3OTg2OTM3OV5BMl5BanBnXkFtZTYwNzY5OTA3._V1_.jpg" alt="Imagen 5"></div>
         </div>
         <!-- nav buttons -->
         <div class="swiper-button-next"></div>
